[gd_scene load_steps=8 format=2]

[ext_resource path="res://Level/Level.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Level/MeshLib.tres" type="MeshLibrary" id=3]
[ext_resource path="res://Menu/Theme.tres" type="Theme" id=4]
[ext_resource path="res://Level/PauseMenu.gd" type="Script" id=5]
[ext_resource path="res://Enemy/Spawner.tscn" type="PackedScene" id=6]

[sub_resource type="Environment" id=1]
background_mode = 1
fog_enabled = true
fog_color = Color( 0, 0, 0, 1 )
fog_sun_color = Color( 0, 0, 0, 1 )

[node name="Level" type="GridMap"]
mesh_library = ExtResource( 3 )
cell_size = Vector3( 100, 100, 100 )
cell_center_y = false
collision_mask = 0
data = {
"cells": PoolIntArray(  )
}
script = ExtResource( 1 )
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0 )

[node name="Spawner" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7, -25 )

[node name="PauseMenu" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 5 )

[node name="CenterContainer" type="CenterContainer" parent="PauseMenu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/CenterContainer"]
margin_left = 540.0
margin_top = 260.0
margin_right = 740.0
margin_bottom = 460.0
rect_min_size = Vector2( 200, 200 )

[node name="Label" type="Label" parent="PauseMenu/CenterContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 22.0
text = "Pause"
align = 1

[node name="ContinueButton" type="Button" parent="PauseMenu/CenterContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 200.0
margin_bottom = 48.0
text = "Continue"

[node name="MenuButton" type="Button" parent="PauseMenu/CenterContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 200.0
margin_bottom = 74.0
text = "Main Menu"

[node name="QuitButton" type="Button" parent="PauseMenu/CenterContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 200.0
margin_bottom = 100.0
text = "Quit"

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="pressed" from="PauseMenu/CenterContainer/VBoxContainer/ContinueButton" to="PauseMenu" method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="PauseMenu/CenterContainer/VBoxContainer/MenuButton" to="PauseMenu" method="_on_MenuButton_pressed"]
[connection signal="pressed" from="PauseMenu/CenterContainer/VBoxContainer/QuitButton" to="PauseMenu" method="_on_QuitButton_pressed"]
